Bug 1608829 - fix wrapping of telemetry checkbox in the preferences/options, r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D60006

UltraBlame original commit: 850151a68fbe0e5ceeb5135c10367e01f9813d13

--- a/browser/themes/shared/incontentprefs/privacy.css
+++ b/browser/themes/shared/incontentprefs/privacy.css
@@ -2296,3 +2296,16 @@ end
 32px
 ;
 }
+#
+submitHealthReportBox
+{
+display
+:
+-
+moz
+-
+inline
+-
+box
+;
+}
